updated some stuff

--- a/extra/Unsolved/index.html
+++ b/extra/Unsolved/index.html
@@ -12,9 +12,72 @@
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.7.3/d3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
+
+  
+   <!-- Leaflet JS & CSS -->
+   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
+   <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
+
+   <!-- d3 JavaScript -->
+   <script src="https://d3js.org/d3.v4.min.js"></script>
+
+   <!-- Our CSS -->
+   <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <!-- extra_markers -->
+    <link rel="stylesheet" href="css/leaflet.extra-markers.min.css">
+    <script src="js/leaflet.extra-markers.min.js"></script>
+
+	<!-- Marker Cluster JS & CSS -->
+	<script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
+	<link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.css">
+	<link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
+
+	<!-- plotly -->
+	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
+
+
 </head>
 <body>
-	<div class="container">
+		<div class="col-xs-12 col-md-12 col-md-offset-0">
+				<h1>D3Times</h1>
+		</div>
+
+		<div class="row h-100">
+		<div class="col-md-1">
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+					<h5 class="panel-title"><strong>Selection 1</strong></h5>
+					<hr>
+				</div>
+				<div id="selection1" class="panel-body">
+					<p>Obesity</p>
+					<p>Obesity</p>
+					<p>Obesity</p>
+				</div>
+			  </div>
+		</div>
+		<div class="col-md-1">
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+				  <h5 class="panel-title"><strong>Selection 2</strong></h5>
+				  <hr>
+				</div>
+				<div id="selection2" class="panel-body">
+					<p>Obesity</p>
+					<p>Obesity</p>
+					<p>Obesity</p>
+				</div>
+			  </div>
+		</div>
+		<div id="map-id" class="col-md-10"></div>
+	</div>
+
+
+
+
+	<!-- <div class="container"> -->
 		<div class="row">
 			<div class="col-xs-12 col-md-12 col-md-offset-0">
 				<h1>D3Times</h1>
@@ -23,22 +86,18 @@
 		<div class="row">
 			<div class="col-xs-12  col-md-12 col-md-offset-0">
 				<div class="iframeContainer">
-					<iframe width="100%" height="400" src="map.html"></iframe>
+					<!-- <iframe width="100%" height="400" src="map.html"></iframe> -->
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-12  col-md-6 col-md-offset-0">
-				<div class="d3_graph">
-					<p>That night they slept where they were. How Aslan provided food for them all I don't know; but somehow or other they found themselves all sitting down on the grass to a fine high tea at about eight o'clock. Next day they began marching Eastward down the side of the great river. And the next day after that, at about tea-time, they actually reached the mouth. The castle of Cair Paravel on its little hill towered up above them; before them were the sands, with rocks and little pools of salt water, and sea weed, and the smell of the sea, and long miles of bluish-green waves breaking forever and ever on the beach. And, oh, the cry of the sea gulls! Have you heard it? Can you remember?</p>
-					<h5>THE LION, THE WITCH
-						and
-						THE WARDROBE</h5>
-						<h6>BY C. S. LEWIS</h6>
+				<div id="graph1">
+				
 				</div>
 			</div>
 			<div class="col-xs-12  col-md-6 col-md-offset-0">
-				<div class="piechart">
+				<div id="graph2">
 					<p>That night they slept where they were. How Aslan provided food for them all I don't know; but somehow or other they found themselves all sitting down on the grass to a fine high tea at about eight o'clock. Next day they began marching Eastward down the side of the great river. And the next day after that, at about tea-time, they actually reached the mouth. The castle of Cair Paravel on its little hill towered up above them; before them were the sands, with rocks and little pools of salt water, and sea weed, and the smell of the sea, and long miles of bluish-green waves breaking forever and ever on the beach. And, oh, the cry of the sea gulls! Have you heard it? Can you remember?</p>
 					<h5>THE LION, THE WITCH
 						and
@@ -54,8 +113,8 @@
 		<p><!-- Insert your Copyright Info here --></p>
 	</div>
 	  <!-- Our JavaScript -->
-	  <!-- <script type="text/javascript" src="js/config.js"></script>
-	  <script type="text/javascript" src="js/logic.js"></script> -->
+	  <script type="text/javascript" src="js/config.js"></script>
+	  <script type="text/javascript" src="js/logic.js"></script>
 
 </body>
 </html>
